fix: dark mode scroll

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -21,26 +21,17 @@ a {
     color: var(--lew-text-color-2);
 }
 
-pre code.hljs::-webkit-scrollbar {
-    background-color: rgb(126, 126, 126, 0);
-    width: 5px;
-    height: 5px;
+::-webkit-scrollbar {
+    width: 15px;
+    background-color: var(--lew-bgcolor-2);
 }
 
-pre code.hljs::-webkit-scrollbar-thumb:hover {
-    background-color: rgb(126, 126, 126);
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--lew-bgcolor-9);
 }
 
-pre code.hljs::-webkit-scrollbar-thumb {
-    background-color: rgb(209 213 219 / 0);
-    opacity: 0;
-    border-radius: 5px;
-}
-
-pre code.hljs:hover::-webkit-scrollbar-thumb {
-    background-color: rgb(209 213 219 / 0.3);
-    opacity: 1;
-    border-radius: 5px;
+::-webkit-scrollbar-thumb {
+    background-color: var(--lew-bgcolor-6);
 }
 
 .sub-title {
